--- a/pages/questionlist.html
+++ b/pages/questionlist.html
@@ -1,5 +1,5 @@
     <div class="questions" ng-controller="QuestionListCtrl as qctrl">
-      <div class="question" ng-repeat="question in qctrl.questions">
-      	<span><a href="#/questions/q{{question.q_id}}">Question {{$index}}</a></span>
+      <div class="question" ng-repeat="question in questions">
+      	<span><a href="#/questions/q{{question}}">Question {{$index}}</a></span>
       </div>
     </div>
